# ML-Fraud-Analysis

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: risk_config.json
docs/: results.md  usage.md  usage_dev.md
models/: model.pkl
notebooks/: 01_exploration.ipynb  02_modeling.ipynb
scripts/: features.py  predict.py
